Updated as much elements as possible to be responsive while avoiding potential visibility (some attributes still needed to be hardcoded as px, regardless).

--- a/style/index.css
+++ b/style/index.css
@@ -96,7 +96,7 @@ body {
 }
 
 .viewablePage {
-    width: 1000px;
+    width: 60%;
     background-image: linear-gradient(to top right, #404040, #E8E8E8);
 }
 
@@ -139,6 +139,12 @@ h3 {
 }
 
 .tablinks {
+    /*
+        Note: Unable to change from hardcoded pixels for these buttons without affecting
+        how the font would appear as the button size gradually decreases.
+        I have set smaller fixed pixel dimensions with a smaller font in the
+        @media for 500 pixels below.
+    */
     width: 100px;
     height: 30px;
     border-radius: 10px;
@@ -156,7 +162,7 @@ h3 {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    padding: 20px;
+    padding: 2%;
     font-size: 1.6rem;
 }
 
@@ -173,8 +179,8 @@ h3 {
         container. In this case, the container is the image in
         the first section, just below the header.
     */
-    width: 350px;
-    height: 350px;
+    width: 75%;
+    height: 75%;
     border: 4px solid gold;
 }
 
@@ -198,7 +204,8 @@ h3 {
         the container (the <div> in this case) from the edges
         of the parent container (.wrapSection in this case)
     */
-    margin: 10px 0;
+    width: 22%;
+    margin: 2% 0;
 }
 
 .wrapSection img {
@@ -210,8 +217,7 @@ h3 {
         In the case below, the content is the series of images
         all being adjusted to sizes of 170px * 170px
     */
-    width: 220px;
-    height: 220px;
+    width: 100%;
 }
 
 .iconSection {
@@ -227,8 +233,12 @@ h3 {
 }
 
 .iconSection img {
+    /*
+        These icons already take up a small amount of space when using pixels
+        Setting them using percentages would either make them too tiny for
+        screen widths between 810 and about 1200 pixels or too big the other way.
+    */
     width: 60px;
-    height: 60px;
 }
 
 footer {
@@ -256,8 +266,6 @@ footer {
     }
 
     .nameSection img {
-        width: 220px;
-        height: 220px;
         border: 2px solid gold;
     }
 
@@ -267,12 +275,6 @@ footer {
 
     .wrapSection div {
         width: 30%;
-        height: 30%;
-    }
-
-    .wrapSection img {
-        width: 90%;
-        height: 90%;
     }
 }
 
@@ -294,18 +296,15 @@ footer {
     }
 
     .nameSection img {
-        width: 300px;
-        height: 300px;
+        width: 90%;
         border: 2px solid gold;
     }
 
     .wrapSection div {
         width: 44%;
-        height: 44%;
     }
 
     .iconSection img {
         width: 30px;
-        height: 30px;
     }
 }
